--- a/main.css
+++ b/main.css
@@ -272,3 +272,14 @@ html ,body{
     position:absolute;
     margin-left: 90px;
 }
+
+@media screen and (max-width: 1024px){
+    .mainbox{
+        transform:scale(1.1);
+    }
+    
+    .footlinks{
+        bottom: 85px;
+        font-size: 96%;
+    }  
+}
