--- a/main.css
+++ b/main.css
@@ -19,8 +19,8 @@ body{
     text-align: center;
     border: 2px solid rgba(0, 0, 0, 0);
     border-radius: 20px;
-    width: 300px; /* reasonable default width */
-    height: 500px; /* reasonable default height */
+    width: 30rem; /* reasonable default width */
+    height: 60rem; /* reasonable default height */
     display: flex;
     
     position: relative;
