--- a/main.css
+++ b/main.css
@@ -273,7 +273,7 @@ html ,body{
     margin-left: 90px;
 }
 
-@media screen and (max-width: 992px){
+@media screen and (min-width: 992px){
     .mainbox{
         height: 25rem;
         width: 25rem;
