--- a/main.css
+++ b/main.css
@@ -19,10 +19,9 @@ body{
     text-align: center;
     border: 2px solid rgba(0, 0, 0, 0);
     border-radius: 20px;
-    width: 20rem; /* reasonable default width */
-    height: 50rem; /* reasonable default height */
-    display: flex;
-    
+    width: 300px; /* reasonable default width */
+    height: 500px; /* reasonable default height */
+    display: flex;  
     position: relative;
     left: 40px;
     padding: 20px;
