--- a/main.css
+++ b/main.css
@@ -272,7 +272,7 @@ html ,body{
     margin-left: 90px;
 }
 
-@media screen and (min-width: 992px){
+@media screen and (max-width: 992px){
     .mainbox{
         transform: scale(0.8);
     }
