--- a/main.css
+++ b/main.css
@@ -19,8 +19,8 @@ body{
     text-align: center;
     border: 2px solid rgba(0, 0, 0, 0);
     border-radius: 20px;
-    /* width: 300px; /* reasonable default width */
-    /* height: 500px; /* reasonable default height */ */ */
+    width: 300px;
+    height: 500px; 
     display: flex;  
     position: relative;
     padding: 20px;
@@ -270,4 +270,3 @@ html ,body{
     position:absolute;
     margin-left: 90px;
 }
-
