--- a/main.css
+++ b/main.css
@@ -23,6 +23,7 @@ body{
     height: 500px; 
     display: flex;  
     position: relative;
+    left: 40px;
     padding: 20px;
     padding-left: 10px;
     transform:scale(1.3);
