Media Query test

--- a/main.css
+++ b/main.css
@@ -2,7 +2,6 @@
 body{
     background-image: linear-gradient(rgb(0, 0, 0) , rgb(0, 0, 0));
     display: flex;
-    
     align-items: center;
     justify-content: center;
     overflow:hidden;
@@ -270,4 +269,32 @@ html ,body{
     bottom: 50px;
     position:absolute;
     margin-left: 90px;
+}
+
+@media screen and (min-width: 1366px){
+    .mainbox{
+        transform: scale(1.3);
+    }
+
+}
+@media screen and (max-width: 1366px){
+    .mainbox{
+        transform: scale(1);
+    }
+
+    .footlinks{
+        bottom: 45px;
+        font-size: 14px;
+    }
+}
+
+@media screen and (max-width:400px){
+    .mainbox{
+        transform: scale(0.6);
+    }
+
+    .footlinks{
+        bottom: 45px;
+        font-size: 14px;
+    }
 }
