--- a/main.css
+++ b/main.css
@@ -287,6 +287,11 @@ html ,body{
         font-size: 14px;
     }
 }
+@media screen and (min-width: 1920px){
+    .mainbox{
+        transform: scale(1);
+    }
+}
 
 @media screen and (max-width:400px){
     .mainbox{
