--- a/main.css
+++ b/main.css
@@ -287,7 +287,7 @@ html ,body{
         font-size: 14px;
     }
 }
-@media screen and (min-width: 1920px){
+@media screen and (max-width: 1920px){
     .mainbox{
         transform: scale(1);
     }
